# django-neurobank

./: MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish-to-pypi.yml  test-app.yml
nbank_registry/: __init__.py  admin.py  apps.py  errors.py  models.py  resource_download.py  serializers.py  tests.py  tools.py  urls.py  views.py
nbank_registry/fixtures/: nbank_registry_starter_kit.json
nbank_registry/migrations/: 0001_initial.py  0002_auto_20180511_1141.py  0003_auto_20210406_1203.py  0004_auto_20210406_1211.py  0005_datatype_downloadable.py  0006_alter_archive_id_alter_datatype_id_alter_location_id_and_more.py  0007_datatype_extension_alter_datatype_content_type.py  0008_alter_datatype_extension.py  0009_archive_accessibility.py
nbank_registry/tests/: settings.py  test_models.py  test_views.py  urls.py
neurobank/: __init__.py  admin.py  errors.py  models.py  serializers.py  tests.py  tools.py  urls.py  views.py
neurobank/migrations/: 0001_initial.py  0002_auto_20170624_0926.py  0002_auto_20180511_1141.py  0003_auto_20170624_0933.py  0003_auto_20210406_1203.py  0004_auto_20170624_0941.py  0004_auto_20210406_1211.py  0005_auto_20170624_0943.py  0005_datatype_downloadable.py  0006_auto_20170624_0954.py  0007_resource_sha1.py  0008_auto_20170626_1456.py  0009_auto_20170626_1458.py  0010_auto_20170626_1509.py  0011_auto_20170626_1616.py  0012_auto_20170627_1049.py  0013_auto_20170627_1226.py  0014_auto_20170712_1018.py
