[bdist_wheel]
universal = 1

[pep8]
ignore=E221,E501,E701

[metadata]
name = django-neurobank
version = attr: nbank_registry.__version__
description = A Django-based registry for the neurobank system
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    Development Status :: 3 - Beta
    Framework :: Django
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD 3-Clause License
    Programming Language :: Python
    Topic :: Scientific/Engineering
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
author = C Daniel Meliza
author_email = dan@meliza.org
maintainer = C Daniel Meliza
maintainer_email = dan@meliza.org
url = https://github.com/melizalab/django-neurobank

[options]
zip_safe = false
include_package_data = true
packages = nbank_registry
python_requires = >= 3.8
setup_requires =
    setuptools
install_requires =
    django-sendfile2 >= 0.6.0
    neurobank >= 0.9.3
test_suite = nbank_registry.tests

[options.packages.find]
exclude = *test*

